--- a/src/MainApi/wwwroot/login/index.html
+++ b/src/MainApi/wwwroot/login/index.html
@@ -194,9 +194,9 @@
                 $('msg').className = 'msg success';
                 $('msg').textContent = data.message || 'Вход выполнен';
                 setTimeout(() => location.reload(), 1000);
-            } else if (resp.status === 401 && data.Next === 'enter-2fa') {
+            } else if (data.Next === 'enter-2fa') {
                 showStep('2fa');
-            } else if (resp.status === 403 && data.Next === 'setup-2fa') {
+            } else if (data.Next === 'setup-2fa') {
                 await start2faSetup(login);
             } else {
                 $('msg').className = 'msg error';
